--- a/package.json
+++ b/package.json
@@ -63,12 +63,15 @@
     "lodash": "4.17.21",
     "morgan": "1.10.0",
     "nestjs-i18n": "^10.4.0",
+    "nestjs-pino": "^4.0.0",
     "nestjs-redis": "1.3.3",
     "passport": "0.7.0",
     "passport-facebook": "3.0.0",
     "passport-google-oauth20": "2.0.0",
     "passport-jwt": "4.0.1",
     "passport-local": "1.0.0",
+    "pino-http": "^9.0.0",
+    "pino-pretty": "^10.3.1",
     "prisma": "^5.7.0",
     "prom-client": "^15.0.0",
     "reflect-metadata": "0.2.1",
