--- a/deploy/docker-compose/docker-compose.local.yaml
+++ b/deploy/docker-compose/docker-compose.local.yaml
@@ -44,7 +44,7 @@ services:
       - redis
       - postgres
     healthcheck:
-      test: ['CMD', 'curl', '-f', 'http://localhost:3001/api/v1/health']
+      test: ['CMD', 'curl', '-f', 'http://localhost:3001/health']
       interval: 30s
       timeout: 10s
       retries: 3
