--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "joi": "17.11.0",
     "lodash": "4.17.21",
     "morgan": "1.10.0",
+    "nestjs-cls": "^3.6.0",
     "nestjs-i18n": "^10.4.0",
     "nestjs-pino": "^4.0.0",
     "nestjs-redis": "1.3.3",
